fix bug offcanvas on mobile

--- a/style.css
+++ b/style.css
@@ -504,4 +504,9 @@ footer li {
         padding: 0 30px 0 30px;
     }
 
+    .mynavbar .offcanvas {
+        height: 100vh;
+        width: 200px;
+    }
+
 }
